cambios pagina principal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
 				<h1><a class="navbar-brand" href="index.html">
-					<span class="fa fa-book"></span> Tutee
+					<span class="fa fa-book"></span> Bioblogger
 				</a></h1>
 				<!-- if logo is image enable this   
 			<a class="navbar-brand" href="#index.html">
@@ -154,8 +154,8 @@ $(function () {
   <div class="slide header11" data-selector="header11">
       <div class="container">
           <div class="banner-text ">
-              <h5 class=" ">Present Education<br> in beautiful way!</h5>
-              <p class=" ">Adipi sicing elit. Quia, aliquid voluptatum corporis Dicta. Deleniti possimus culpa nemo asperiores aperiam mollitia, maiores Lorem ipsum dolor.</p>
+              <h5 class=" ">Bioblogger<br> where you can change your own world </h5>
+              <p class=" ">Biotechnology and biology are two worlds that you can discover in a simple way </p>
               <div >
                 <form class="form-inline forms-gds" action="#" method="post">
                 <input type="email" name="" placeholder="Email" required="">
