cambios para la página

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
 				<h1><a class="navbar-brand" href="index.html">
-					<span class="fa fa-book"></span> Bioblogger
+					 Bioblogger
 				</a></h1>
 				<!-- if logo is image enable this   
 			<a class="navbar-brand" href="#index.html">
@@ -172,10 +172,9 @@ $(function () {
         <div class="container">
             <div class="booking-form-content">
                 <div class="main-titles-head ">
-                <h3 class="header-name">You Can learn anything
+                <h3 class="header-name">You Can learn a lot about biotechnology and biology.
                 </h3>
-                <p class="tiltle-para editContent ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic fuga sit illo modi aut aspernatur tempore laboriosam saepe dolores eveniet.</p>
-            </div>
+                <p class="tiltle-para editContent ">Biology is the study about living beings and biotechnology is the study about the use of living beings.
                <div class="row text-center">
                 <div class="col-lg-4 col-md-6 propClone about-line-top ">
                     <div class="area-box color-white editContent box-active">
@@ -183,8 +182,7 @@ $(function () {
                         
                     <h5><a href="blog.html" class="editContent">
                         Unlimited Access</a></h5>
-                    <p class="para editContent">Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
-                        quos, nobis culpa est</p>
+                    <p class="para editContent">you don't have any restriction and you'll able to use the information from here</p>
             </div>
             </div>
             <div class="col-lg-4 col-md-6 propClone about-line-top ">
@@ -192,9 +190,8 @@ $(function () {
                     <div class="icon-back"><span class="fa fa-users"></span></div>
                     
                 <h5><a href="blog.html" class="editContent">
-                    Expert Teachers</a></h5>
-                <p class="para editContent">Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
-                    quos, nobis culpa est</p>
+                    TedTalks</a></h5>
+                <p class="para editContent">Tedtalks allow to understand the world in the different ways and also it give you oportunities to reprogramate yourself</p>
         </div>
         </div>
         <div class="col-lg-4 col-md-6 propClone about-line-top">
