--- a/index.html
+++ b/index.html
@@ -272,10 +272,9 @@ $(function () {
         <div class="covers-main editContent">
             <div class="container">
               <div class="main-titles-head ">
-                <h3 class="header-name">Browse our top courses
+                <h3 class="header-name"> You can find a lot of courses from universities arround the world
                 </h3>
-                <p class="tiltle-para editContent ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic fuga sit illo modi aut aspernatur tempore laboriosam saepe dolores eveniet.</p>
-            </div>
+                <p class="tiltle-para editContent ">There are many courses here, that universities arround the world provide to learn more about biotechnology and bilogy in general.
                 <div class="gallery-image row">
                   <div class="col-lg-4 col-md-6">
                     <img src="assets/images/b2.jpg" alt="product" class="img-responsive ">
