--- a/index.html
+++ b/index.html
@@ -288,19 +288,19 @@ $(function () {
                   <div class=" col-lg-4 col-md-6 top-top2">
                     <img src="assets/images/b1.jpg" alt="product" class="img-responsive ">
                     <div class="img-box">
-                    <h5 class="mb-2"><a href="about.html">Art Design</a></h5>
+                    <h5 class="mb-2"><a href="about.html">Experiments</a></h5>
                     <div class="blog-date"> 
                       <p class="pos-date"><span class="fa fa-calendar mr-1"></span>7 April</p> <p class="pos-date"><span class="fa fa-eye mr-1"></span> 3286 Views</p></div>
-                      <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque labor.</p>
+                      <p class="para">In the real life there are many things that change with the time, that's why experiments are important to solution our own lifes.</p>
                   </div>
                 </div>
                   <div class="col-lg-4 col-md-6 top-top">
                     <img src="assets/images/b3.jpg" alt="product" class="img-responsive ">
                     <div class="img-box">
-                    <h5 class="mb-2"><a href="about.html">Programming</a></h5>
+                    <h5 class="mb-2"><a href="about.html">Biology and ecologic world</a></h5>
                     <div class="blog-date"> 
                       <p class="pos-date"><span class="fa fa-calendar mr-1"></span>7 April</p> <p class="pos-date"><span class="fa fa-eye mr-1"></span> 3286 Views</p></div>
-                      <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque labor.</p>
+                      <p class="para">New world demands new forms to solve problems and it is important to understand the change and climate change.</p>
                   </div>
                   </div>
                   </div>
@@ -318,11 +318,10 @@ $(function () {
 				<img src="assets/images/b6.jpg" alt="product" class="img-responsive ">
 			</div>
 				<div class="nature-row  coloum4 col-lg-6 align-self">
-					<h6 class="small-title">HOW WE WORK</h6>
-						<h3>Your bright future is our mission!. </h3>
+					<h6 class="small-title">HOW WE GET SICK</h6>
+						<h3>Microorganisms are good or bad. </h3>
 					<p class="para editContent text ">
-						Moll itia placeat modi expl icabo volup tatum corporis unde Dicta, provident
-						Rem adipisci Moll itia placeat modi volup tatem tenetur conse quatur.Conseq tenetur conse quatur adipi sicing elit.</p>
+						Since decades people believed that you get sick because of microorganisms and all of them are bad, but no, actually microorganisms are important in our health and without them you get sick more easily.</p>
 						<a href="about.html" class="action-button btn mt-lg-5 mt-4">Read more</a>
 					</div>
 				</div>
@@ -346,11 +345,8 @@ $(function () {
                                 <div class="d-grid hh14-text">
                                     <img class="img-responsive" src="assets/images/c3.jpg" alt="image">
                                     <div class="hh14-info">
-                                        <h6>Limitless learning</h6>
-                                        <p class="para">Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
-                                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim.</p>
+                                        <h6>I change my behavior</h6>
+                                        <p class="para">When I realized the impact of my actions on the environment, I started working to reduce my carbon footprint and live more sustainably.</p>
                                       <h4>Jack Willson</h4>
                                     </div>
 
@@ -363,11 +359,8 @@ $(function () {
                                 <div class="d-grid hh14-text">
                                     <img class="img-responsive" src="assets/images/c1.jpg" alt="image">
                                     <div class="hh14-info">
-                                        <h6>World's best courses</h6>
-                                        <p class="para">Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
-                                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim.</p>
+                                        <h6>I discover that I can access to get information free</h6>
+                                        <p class="para">I could access a wealth of knowledge and resources without any cost, which helped me learn and grow in ways I never imagined.</p>
                                             <h4>Nike samson</h4>
                                     </div>
 
@@ -379,11 +372,8 @@ $(function () {
                                 <div class="d-grid hh14-text">
                                     <img class="img-responsive" src="assets/images/c2.jpg" alt="image">
                                     <div class="hh14-info">
-                                        <h6>Popular Courses</h6>
-                                        <p class="para">Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
-                                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                            minim.</p>
+                                        <h6>Valuable information</h6>
+                                        <p class="para">When I entry and discover the difference between biotechnology and biology I pass the exam and now I can apply my knowledge in my daily life.</p>
                                             <h4>Milky Deo</h4>
                                     </div>
 
@@ -417,45 +407,23 @@ $(function () {
 		<div class="grid-col-4 footer-top-29">
 			<div class="footer-list-29 footer-1">
 				<h2 class="footer-title-29">About Us</h2>
-<p class="para">Ipsum dolor sit amet, consectetur adipisicing elit. Itaque quis repellendus nesciunt quam cupiditate explicabo modi non error consequatur sunt molestiae laboriosam adipisci voluptatem possimus</p>
-				<div class="main-social-footer-29">
-					<a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-					<a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-					<a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-					<a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
-					<a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-				</div>
+<p class="para">Bioblogger was designed to provide accessible and valuable information to everyone interested in biology and biotechnology and we give you some free courses from different universities arround the world.</p>
+				
 			</div>
 			<div class="footer-list-29 footer-2">
-				<ul>
-					<h6 class="footer-title-29">Latest News</h6>
-					<li><a href="#pages">Programming language</a>
-					<h5><a href="#pages">by Admin</a></h5></li>
-					<li><a href="#pages">Graduate Admissions</a><h5><a href="#pages">by Admin</a></h5></li>
-					<li><a href="#pages">Committed to educating</a><h5><a href="#pages">by Admin</a></h5></li>
-				</ul>
-			</div>
+	
+					
 			<div class="footer-list-29 footer-3">
 				<div class="properties">
 					<h6 class="footer-title-29">Contact Us</h6>
 
 				<ul>
-					<li><p><span class="fa fa-map-marker"></span>California, #32841 block,
-						#221DRS 75 West Rock,
-						Maple Building, UK.</p></li>
-					<li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-					<li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> example@mail.com</a></li>
+					<li><p><span class="fa fa-map-marker"></span>Medellín, Cra 66 # 36-27 Barrio Conquistadores</p></li>
+					<li><a href="tel:+57-323-497-9560"><span class="fa fa-phone"></span> +(57)-323-497-9560</a></li>
+					<li><a href="e-mail: mepalaciod@gmail.com" class="mail"><span class="fa fa-envelope-open-o"></span> mepalaciod@gmail.com</a></li>
 				</ul>
 			</div>
 			</div>
-			<div class="footer-list-29 footer-4">
-				<ul>
-					<h6 class="footer-title-29">Useful Links</h6>
-					<li><a href="#url">Forums</a></li>
-					<li><a href="#url">Our Teachers</a></li>
-					<li><a href="#url">Upcoming Events</a></li>
-					<li><a href="#url">Popular Courses</a></li>
-					<li><a href="#url">Verified Course</a></li>
 				</ul>
 			</div>
 		</div>
