--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ $(function () {
 			</div>
 		</div>
 		<div class=" bottom-copies row">
-			<p class="copy-footer-29 col-lg-8">© 2020 Tutee. All rights reserved | Designed by <a href="//w3layouts.com">W3layouts</a></p>
+			<p class="copy-footer-29 col-lg-8">© 2020 Bioblogger. All rights reserved | Designed by <a href="//w3layouts.com">W3layouts</a></p>
 			<ul class="list-btm-29 col-lg-4">
 				<li><a href="#link">Privacy policy</a></li>
 				<li><a href="#link">Terms of service</a></li>
