--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
 				<h1><a class="navbar-brand" href="index.html">
-					 Bioblogger
+					 🔬 Bioblogger
 				</a></h1>
 				<!-- if logo is image enable this   
 			<a class="navbar-brand" href="#index.html">
