--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 	<header id="site-header">
 		<div class="container">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
-				<h1><a class="navbar-brand" href="index.html">
-					<span class="fa fa-book"></span> Tutee
-				</a></h1>
+			<h1><a class="navbar-brand" href="index.html">
+				🔬 Bioblogger
+			</a></h1>
 				<!-- if logo is image enable this   
 			<a class="navbar-brand" href="#index.html">
 				<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
