--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     />
 
     <title>
-      Tutee an Education Category Category Responsive Web Template| Contact ::
+      Bioblogger an alternative to solve your questions Contact :
       W3layouts
     </title>
 
@@ -201,18 +201,17 @@
         <div class="container">
           <div class="d-grid contact-view">
             <div class="cont-details">
-              <h3 class="sub-title">Get in touch</h3>
+              <h3 class="sub-title">Bioblogger get in touch</h3>
               <p class="para mt-3 mb-4">
-                Consectetur adipisicing elit.Lorem ipsum dolor sit amet
-                Dignissimos commodi laborum.
+                Give us your information.
               </p>
 
               <div class="cont-top">
                 <h6 class="mt-4 cont-left">Address:</h6>
                 <div class="cont-right">
                   <p class="para mt-1">
-                    California, #32841 block, #221DRS 75<br />
-                    West Rock, Maple Building, UK.
+                    Medellín/Colombia<br />
+                    Barrio Conquistadores Cra 66 # 36-27
                   </p>
                 </div>
               </div>
@@ -220,10 +219,7 @@
                 <h6 class="mt-4 cont-left">Contact:</h6>
                 <div class="cont-right">
                   <p class="para mt-1">
-                    <a href="tel:+44 99 555 42">+123 45 67 89</a>
-                  </p>
-                  <p class="para">
-                    <a href="tel:+111 45 67 99">+111 45 67 99</a>
+                    <a href="tel:+44 99 555 42">+57 3234979560</a>
                   </p>
                 </div>
               </div>
@@ -232,7 +228,7 @@
                 <div class="cont-right">
                   <p class="para mt-1">
                     <a href="mailto:example@mail.com" class="mail"
-                      >example@mail.com</a
+                      >mepalaciod@gmail.com</a
                     >
                   </p>
                 </div>
